# SurveyStreme

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  enviroonment.yaml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: next-task.md  review.md  verify.md
.streamlit/: config.toml
docs/: claude-code-guide.md  improvement_roadmap.md  roadmap.md
docs/tasks/: task-01-pdf-unification.md  task-02-summary-type-dedup.md  task-03-pdf-regex.md  task-04-matrix-grid-format.md  task-05-normalize-type-expand.md  task-06-qn-filter-lists.md  task-07-chunk-context.md  task-14-answer-options-prompt.md  task-15-skip-filter-prompt.md
models/: survey.py
pages/: checklist_generator.py  doc_analyzer.py  intelligence_dashboard.py  length_estimator.py  path_simulator.py  piping_intelligence.py  quality_checker.py  skip_logic_visualizer.py  table_guide.py  translation_helper.py  user_guide.py
services/: checklist_generator.py  chunker.py  docx_parser.py  docx_renderer.py  grammar_checker.py  length_estimator.py  llm_client.py  llm_extractor.py  path_simulator.py  pdf_parser.py  piping_service.py  postprocessor.py  quality_checker.py  skip_logic_service.py  survey_context.py  table_guide_service.py  translation_service.py
tests/: smoke_test_banner_assignment.py  smoke_test_chunk_context.py  smoke_test_chunk_text.py  smoke_test_dashboard.py  smoke_test_normalize_type.py  smoke_test_pdf.py  smoke_test_pdf_postprocess.py  smoke_test_pdf_regex.py  smoke_test_piping.py  smoke_test_qn_filter.py  smoke_test_special_instructions.py  smoke_test_subbanner.py  smoke_test_translation.py
ui/: download.py  spreadsheet.py  tree_view.py
