[project]
name = "questvoyager"
version = "0.1.0"
description = "Survey questionnaire analysis platform with LLM-powered extraction and Table Guide generation"
authors = [
    {name = "Jeongho-Shin", email = "purplecollar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.44.0,<2.0.0)",
    "streamlit-option-menu (>=0.4.0,<0.5.0)",
    "python-docx (>=1.1.2,<2.0.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "openai (>=1.70.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "google-cloud-aiplatform (>=1.38.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "smoke_test_*.py"]
